feat(contact page): Implemented contact form

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
        <socmedContainer class="flex justify-center items-center p-3.5 lg:hidden" style="background-color: #1877F2;">
             <socmedLogo class="flex space-x-6 lg:space-x-12">
                 <a href="https://www.instagram.com/ragingboltsz/?fbclid=IwZXh0bgNhZW0CMTEAAR0LkZafdf6xwhAUjk8dX6t4PnkdA9SnnDVFybZFnF8UdUCTWjIqOg5q-VY_aem_pK1T6md4iD15dXcF0T2zYw" target="_blank">
-                    <img src="assets/img/instagram 1.svg" alt="" class="" id="instagram">
+                    <img src="pages/contactPage/assets/img/instagram 4.svg" alt="" class="" id="instagram">
                 </a>
                 <a href="https://www.facebook.com/ragingbolts/" target="_blank">
-                    <img src="assets/img/facebook 1.svg" alt="" class="" id="facebook">
+                    <img src="pages/contactPage/assets/img/facebook 4.svg" alt="" class="" id="facebook">
                 </a>
                 <a href="" target="_blank">
                     <img src="assets/img/twitter 1.svg" alt="" class="" id="twitter">
@@ -85,7 +85,7 @@
                         <li><a href="pages\aboutUs\index.html" class="no-underline rounded-xl m-7 p-3 hover:bg-gray-300 transition-colors">ABOUT</a></li>
                         <li><a href="pages\page2\index.html" class="no-underline rounded-xl m-7 p-3 hover:bg-gray-300 transition-colors">SCHOOLS</a></li>
                         <li><a href="pages\page4\index.html" class="no-underline rounded-xl m-7 p-3 hover:bg-gray-300 transition-colors">SUBMIT</a></li>
-                        <li><a href="pages\page3\index.html" class="no-underline rounded-xl m-7 p-3 hover:bg-gray-300 transition-colors">CONTACT</a></li>
+                        <li><a href="pages\contactPage\index.html" class="no-underline rounded-xl m-7 p-3 hover:bg-gray-300 transition-colors">CONTACT</a></li>
                     </ul>
                 </div>
                 <div class="flex items-center gap-6">
