feat(submit review page): added the submit a review body

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <ul class="flex lg:flex-row flex-col md:items-center lg:gap-[4vw] gap-8" id="navCTA";">
                         <li><a href="pagesindex.html"        class="no-underline rounded-xl m-7 p-3 m hover:bg-gray-300 transition-colors">HOME</a></li>
                         <li><a href="pages\aboutUs\index.html" class="no-underline rounded-xl m-7 p-3 hover:bg-gray-300 transition-colors">ABOUT</a></li>
-                        <li><a href="pages\submitPage\index.html" class="no-underline rounded-xl m-7 p-3 hover:bg-gray-300 transition-colors">SCHOOLS</a></li>
+                        <li><a href="pages\schoolPage\index.html" class="no-underline rounded-xl m-7 p-3 hover:bg-gray-300 transition-colors">SCHOOLS</a></li>
                         <li><a href="pages/submitPage/index.html" class="no-underline rounded-xl m-7 p-3 hover:bg-gray-300 transition-colors">SUBMIT</a></li>
                         <li><a href="pages\contactPage\index.html" class="no-underline rounded-xl m-7 p-3 hover:bg-gray-300 transition-colors">CONTACT</a></li>
                     </ul>
@@ -131,7 +131,7 @@
         <ul class="flex ">
             <li><a href="#"                        class="p-[16.5px] lg:py-[19px] lg:p-[15.5px] xl:p-[35px] xl:py-[19px] hover:bg-gray-300 active:bg-gray-400 transition-colors text-sm">HOME</a></li>
             <li><a href="pages\aboutUs\index.html" class="p-[16.5px] lg:py-[19px] lg:p-[15.5px] xl:p-[35px] xl:py-[19px] hover:bg-gray-300 active:bg-gray-400 transition-colors text-sm">ABOUT</a></li>
-            <li><a href="pages\submitPage\index.html" class="p-[16.5px] lg:py-[19px] lg:p-[15.5px] xl:p-[35px] xl:py-[19px] hover:bg-gray-300 active:bg-gray-400 transition-colors text-sm">SCHOOLS</a></li>
+            <li><a href="pages\schoolPage\index.html" class="p-[16.5px] lg:py-[19px] lg:p-[15.5px] xl:p-[35px] xl:py-[19px] hover:bg-gray-300 active:bg-gray-400 transition-colors text-sm">SCHOOLS</a></li>
             <li><a href="pages/submitPage/index.html" " class="p-[16.5px] lg:py-[19px] lg:p-[15.5px] xl:p-[35px] xl:py-[19px] hover:bg-gray-300 active:bg-gray-400 transition-colors text-sm">SUBMIT</a></li>
             <li><a href="pages\contactPage\index.html" class="p-[16.5px] lg:py-[19px] lg:p-[15.5px] xl:p-[35px] xl:py-[19px] hover:bg-gray-300 active:bg-gray-400 transition-colors text-sm">CONTACT</a></li>
         </ul>
