feat(rating form): added rating form

--- a/pages/submitReview/index.html
+++ b/pages/submitReview/index.html
@@ -177,7 +177,7 @@
             <div class="flex justify-end mb-5">
                 <img src="assets/img/feedback 1.svg" class="w-[15%]" alt="">
             </div>
-            <a href="#" class="hover:underline">
+            <a href="pages\ratingForm\index.html" class="hover:underline">
                 <h1 id="custom-shadow" class="text-center text-2xl hover:underline ">PERSONAL <br> REVIEW  & <br> RATING FORM</h1>
             </a>
             </div>
