--- a/pages/aboutUs/index.html
+++ b/pages/aboutUs/index.html
@@ -76,11 +76,11 @@
                 <div
                 class="nav-links duration-500 lg:static absolute bg-white lg:min-h-fit min-h-[40vh] left-0 top-[-100%] lg:w-auto w-full flex items-center shadow-md px-5">
                     <ul class="flex lg:flex-row flex-col md:items-center lg:gap-[4vw] gap-8" id="navCTA";">
-                        <li><a href="index.html"        class="no-underline rounded-xl m-7 p-3 m hover:bg-gray-300 transition-colors">HOME</a></li>
-                        <li><a href="pages\page1\index.html" class="no-underline rounded-xl m-7 p-3 hover:bg-gray-300 transition-colors">ABOUT</a></li>
-                        <li><a href="pages\schoolPage\index.html" class="no-underline rounded-xl m-7 p-3 hover:bg-gray-300 transition-colors">SCHOOLS</a></li>
-                        <li><a href="pages\page4\index.html" class="no-underline rounded-xl m-7 p-3 hover:bg-gray-300 transition-colors">SUBMIT</a></li>
-                        <li><a href="pages\page3\index.html" class="no-underline rounded-xl m-7 p-3 hover:bg-gray-300 transition-colors">CONTACT</a></li>
+                        <li><a href="\index.html"        class="no-underline rounded-xl m-7 p-3 m hover:bg-gray-300 transition-colors">HOME</a></li>
+                        <li><a href="#"  class="no-underline rounded-xl m-7 p-3 hover:bg-gray-300 transition-colors">ABOUT</a></li>
+                        <li><a href="\pages\schoolPage\index.html" class="no-underline rounded-xl m-7 p-3 hover:bg-gray-300 transition-colors">SCHOOLS</a></li>
+                        <li><a href="\pages\submitPage\index.html" class="no-underline rounded-xl m-7 p-3 hover:bg-gray-300 transition-colors">SUBMIT</a></li>
+                        <li><a href="\pages\contactPage\index.html" class="no-underline rounded-xl m-7 p-3 hover:bg-gray-300 transition-colors">CONTACT</a></li>
                     </ul>
                 </div>
                 <div class="flex items-center gap-6">
