--- a/pages/submitReview/index.html
+++ b/pages/submitReview/index.html
@@ -114,7 +114,7 @@
 </lowerNav>
 
 <div class="">
-<div class="hidden lg:flex bg-white shadow:xl items-center lg:justify-between w-full lightgrey" id="bgcolor">
+<div class="hidden lg:flex bg-white shadow:xl items-center lg:justify-between w-full lightgrey" id="bgcolor ">
     <div class="flex items-center bg-[#D9D9D9] p-3 pr-7">
         <img src="assets/img/ranking 3.svg" alt="" class="mr-4">
         <img src="assets/img/RAGINGBOLT.svg" alt="">
@@ -173,7 +173,7 @@
             <div class="flex justify-end mb-5">
                 <img src="assets/img/feedback 1.svg" class="w-[15%]" alt="">
             </div>
-            <a href="pages\ratingForm\index.html" class="hover:underline">
+            <a href="\pages\ratingForm\index.html" class="hover:underline">
                 <h1 id="custom-shadow" class="text-center text-2xl hover:underline ">PERSONAL <br> REVIEW  & <br> RATING FORM</h1>
             </a>
             </div>
@@ -183,7 +183,7 @@
                 <img src="assets/img/feedback 1.svg" class="w-[15%]" alt="">
             </div>
             <div class="">
-                <a href="pages\submitReview\index.html" class="hover:underline">
+                <a href="\pages\submitPage\index.html" class="hover:underline">
                     <h1 class="text-center text-2xl">EDUCATION <br> PLATFORM <br>
                         SUBMISSION <br>FORM</h1>
                 </a>
