fix(school page): fixed nav links HTML href

--- a/pages/submitReview/index.html
+++ b/pages/submitReview/index.html
@@ -75,11 +75,11 @@
                 <div
                 class="nav-links duration-500 lg:static absolute bg-white lg:min-h-fit min-h-[40vh] left-0 top-[-100%] lg:w-auto w-full flex items-center shadow-md px-5">
                     <ul class="flex lg:flex-row flex-col md:items-center lg:gap-[4vw] gap-8" id="navCTA";">
-                        <li><a href="pagesindex.html"        class="no-underline rounded-xl m-7 p-3 m hover:bg-gray-300 transition-colors">HOME</a></li>
-                        <li><a href="pages\page1\index.html" class="no-underline rounded-xl m-7 p-3 hover:bg-gray-300 transition-colors">ABOUT</a></li>
-                        <li><a href="pages\page2\index.html" class="no-underline rounded-xl m-7 p-3 hover:bg-gray-300 transition-colors">SCHOOLS</a></li>
-                        <li><a href="pages\page4\index.html" class="no-underline rounded-xl m-7 p-3 hover:bg-gray-300 transition-colors">SUBMIT</a></li>
-                        <li><a href="pages\page3\index.html" class="no-underline rounded-xl m-7 p-3 hover:bg-gray-300 transition-colors">CONTACT</a></li>
+                        <li><a href="\index.html"        class="no-underline rounded-xl m-7 p-3 m hover:bg-gray-300 transition-colors">HOME</a></li>
+                        <li><a href="\pages\aboutUs\index.html" class="no-underline rounded-xl m-7 p-3 hover:bg-gray-300 transition-colors">ABOUT</a></li>
+                        <li><a href="\pages\schoolPage\index.html" class="no-underline rounded-xl m-7 p-3 hover:bg-gray-300 transition-colors">SCHOOLS</a></li>
+                        <li><a href="#" class="no-underline rounded-xl m-7 p-3 hover:bg-gray-300 transition-colors">SUBMIT</a></li>
+                        <li><a href="\pages\contactPage\index.html" class="no-underline rounded-xl m-7 p-3 hover:bg-gray-300 transition-colors">CONTACT</a></li>
                     </ul>
                 </div>
                 <div class="flex items-center gap-6">
@@ -114,14 +114,14 @@
 </lowerNav>
 
 <div class="">
-<div class="hidden lg:flex bg-white shadow:xl items-center lg:justify-between w-full lightgrey" id="bgcolor ">
+<div class="hidden lg:flex bg-white shadow:xl items-center lg:justify-between w-full" id="bgcolor">
     <div class="flex items-center bg-[#D9D9D9] p-3 pr-7">
         <img src="assets/img/ranking 3.svg" alt="" class="mr-4">
         <img src="assets/img/RAGINGBOLT.svg" alt="">
     </div>
     
     <div class="ml-4">
-        <ul class="flex ">
+        <ul class="flex">
             <li><a href="#"                        class="p-[16.5px] lg:py-[19px] lg:p-[15.5px] xl:p-[35px] xl:py-[19px] hover:bg-gray-300 active:bg-gray-400 transition-colors text-sm">HOME</a></li>
             <li><a href="pages/page1/aboutus.html" class="p-[16.5px] lg:py-[19px] lg:p-[15.5px] xl:p-[35px] xl:py-[19px] hover:bg-gray-300 active:bg-gray-400 transition-colors text-sm">ABOUT</a></li>
             <li><a href="pages/page2/schools.html" class="p-[16.5px] lg:py-[19px] lg:p-[15.5px] xl:p-[35px] xl:py-[19px] hover:bg-gray-300 active:bg-gray-400 transition-colors text-sm">SCHOOLS</a></li>
@@ -148,7 +148,7 @@
 
 
         <div>
-            <form action="#" method="get" class="p-4 justify-end  flex border-[#D9D9D9] shadow: lg:hidden" id="searchBar" style="">
+            <form action="#" method="get" class="p-4 justify-end  flex border-[#D9D9D9] shadow: lg:hidden" id="searchBar"   >
                 <input type="text" name="search" placeholder="SEARCH SCHOOLS" class="text-center text-xs rounded-l placeholder-black darkgrey" id="placeholder">
                 <button type="submit" class="cursor-pointer w-8 rounded-l">
                     <img src="assets/img/loupe 3.svg" alt="Search Icon" class="rounded-l darkgrey">
