fix(personal review and rating form): adjusted font size

--- a/pages/ratingForm/index.html
+++ b/pages/ratingForm/index.html
@@ -23,7 +23,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inknut+Antiqua:wght@300;400;500;600;700;800;900&family=NTR&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 
-<body class=" Inknut text-xl">
+<body class=" Inknut ">
     <header>
        <socmedContainer class="flex justify-center items-center p-3.5 lg:hidden lightblue ">
             <socmedLogo class="flex space-x-6 lg:space-x-12">
@@ -65,13 +65,13 @@
                     <img src="assets/img/user 3.svg" alt="">
                 </a>
                 <a href="">
-                    <h3 class="hover:bg-gray-300 transition-colors">Login</h3>
+                    <h3 class="hover:bg-gray-300 text-xl transition-colors">Login</h3>
                 </a>  
                
             </adminCustomerCTA>
 
 
-            <nav class="flex justify-between items-center lg:hidden">
+            <nav class="flex justify-between items-center text-xl lg:hidden">
                 <div
                 class="nav-links duration-500 lg:static absolute bg-white lg:min-h-fit min-h-[40vh] left-0 top-[-100%] lg:w-auto w-full flex items-center shadow-md px-5">
                     <ul class="flex lg:flex-row flex-col md:items-center lg:gap-[4vw] gap-8" id="navCTA";">
@@ -207,7 +207,7 @@
                 
 
         <footer class="flex justify-center p-5 darkgrey">
-            <h3 class="text-gray-600 text-xs">
+            <h3 class="text-gray-600 text-md Inknut">
                 Copyright © 2025, All Rights Reserved
             </h3>
         </footer>
