fix(education platform submission form): corrected form label names

--- a/pages/submitPage/index.html
+++ b/pages/submitPage/index.html
@@ -177,29 +177,29 @@
             <form action="#" method="POST">
                 <!-- Name Field -->
                 <div class="mb-4">
-                    <label for="name" class="form-label block">Name</label>
+                    <label for="name" class="form-label block">NAME</label>
                     <input type="text" class="form-control w-full p-2 rounded placeholder-gray-500" id="name" placeholder="" style="background-color: #BFBFBF;">
                 </div>
 
                 <!-- Name of the School/Platform Field -->
                 <div class="mb-4">
-                    <label for="school" class="form-label block">Name of the School/Platform</label>
+                    <label for="school" class="form-label block">NAME OF THE SCHOOL/PLATFORM</label>
                     <input type="text" class="form-control w-full p-2 rounded placeholder-gray-500" id="school" placeholder="" style="background-color: #BFBFBF;">
                 </div>
 
                 <!-- Type of Learning Offered Field -->
                 <div class="mb-4">
-                    <label for="type_of_learning" class="form-label block">Type of Learning Offered</label>
+                    <label for="type_of_learning" class="form-label block">TYPE OF LEARNING OFFERED</label>
                     <input type="text" class="form-control w-full p-2 rounded placeholder-gray-500" id="type_of_learning" placeholder="" style="background-color: #BFBFBF;">
                 </div>
 
                 <!-- Website or Contact Information Field -->
                 <div class="mb-4">
-                    <label for="contact_info" class="form-label block">Website or Contact Information</label>
+                    <label for="contact_info" class="form-label block">WEBSITE OR CONTACT INFORMATION</label>
                     <input type="text" class="form-control w-full p-2 rounded placeholder-gray-500" id="contact_info" placeholder="" style="background-color: #BFBFBF;">
                 </div>
                 <div class="mb-4">
-                    <label for="contact_info" class="form-label block">Description of the Platform</label>
+                    <label for="contact_info" class="form-label block">DESCRIPTION OF THE PLATFORM</label>
                     <input type="text" class="form-control w-full p-2 rounded placeholder-gray-500" id="contact_info" placeholder="" style="background-color: #BFBFBF;">
                 </div>
 
