fix(education platform submission form): fixed desktop size nav HTML links

--- a/pages/submitPage/index.html
+++ b/pages/submitPage/index.html
@@ -122,11 +122,11 @@
     
     <div class="ml-4 ">
         <ul class="flex ">
-            <li><a href=\index.html"                    class="p-[16.5px] lg:py-[19px] lg:p-[15.5px] xl:p-[35px] xl:py-[27px] hover:bg-gray-300 active:bg-gray-400 transition-colors text-[17.5px]">HOME</a></li>
-            <li><a href=\pages\aboutUs\index.html"      class="p-[16.5px] lg:py-[19px] lg:p-[15.5px] xl:p-[35px] xl:py-[27px] hover:bg-gray-300 active:bg-gray-400 transition-colors text-[17.5px]">ABOUT</a></li>
-            <li><a href=\pages\schoolPage\index.html"   class="p-[16.5px] lg:py-[19px] lg:p-[15.5px] xl:p-[35px] xl:py-[27px] hover:bg-gray-300 active:bg-gray-400 transition-colors text-[17.5px]">SCHOOLS</a></li>
-            <li><a href=\pages\submitReview\index.html" class="p-[16.5px] lg:py-[19px] lg:p-[15.5px] xl:p-[35px] xl:py-[27px] hover:bg-gray-300 active:bg-gray-400 transition-colors text-[17.5px]">SUBMIT</a></li>
-            <li><a href=\pages\contactPage\index.html"  class="p-[16.5px] lg:py-[19px] lg:p-[15.5px] xl:p-[35px] xl:py-[27px] hover:bg-gray-300 active:bg-gray-400 transition-colors text-[17.5px]">CONTACT</a></li>
+            <li><a href="\index.html"                    class="p-[16.5px] lg:py-[19px] lg:p-[15.5px] xl:p-[35px] xl:py-[27px] hover:bg-gray-300 active:bg-gray-400 transition-colors text-[17.5px]">HOME</a></li>
+            <li><a href="\pages\aboutUs\index.html"     class="p-[16.5px] lg:py-[19px] lg:p-[15.5px] xl:p-[35px] xl:py-[27px] hover:bg-gray-300 active:bg-gray-400 transition-colors text-[17.5px]">ABOUT</a></li>
+            <li><a href="\pages\schoolPage\index.html"  class="p-[16.5px] lg:py-[19px] lg:p-[15.5px] xl:p-[35px] xl:py-[27px] hover:bg-gray-300 active:bg-gray-400 transition-colors text-[17.5px]">SCHOOLS</a></li>
+            <li><a href="\pages\submitReview\index.html" class="p-[16.5px] lg:py-[19px] lg:p-[15.5px] xl:p-[35px] xl:py-[27px] hover:bg-gray-300 active:bg-gray-400 transition-colors text-[17.5px]">SUBMIT</a></li>
+            <li><a href="\pages\contactPage\index.html" class="p-[16.5px] lg:py-[19px] lg:p-[15.5px] xl:p-[35px] xl:py-[27px] hover:bg-gray-300 active:bg-gray-400 transition-colors text-[17.5px]">CONTACT</a></li>
         </ul>
     </div>
     <div class="ml-auto">
