fix(personal review and rating form): fixed header nav HTML links

--- a/pages/ratingForm/index.html
+++ b/pages/ratingForm/index.html
@@ -113,19 +113,19 @@
     <img src="assets/img/RAGINGBOLT.svg" alt="">
 </lowerNav>
 
-<div class="hidden lg:flex bg-white shadow:xl items-center lg:justify-between w-full lightgrey">
+<div class="hidden lg:flex shadow:xl items-center lg:justify-between w-full lightgrey">
     <div class="flex items-center bg-[#D9D9D9] p-3 pr-7">
         <img src="assets/img/ranking 3.svg" alt="" class="mr-4">
         <img src="assets/img/RAGINGBOLT.svg" alt="">
     </div>
     
-    <div class="ml-4">
+    <div class="ml-4 ">
         <ul class="flex ">
-            <li><a href=\index.html"                    class="p-[16.5px] lg:py-[19px] lg:p-[15.5px] xl:p-[35px] xl:py-[19px] hover:bg-gray-300 active:bg-gray-400 transition-colors text-sm">HOME</a></li>
-            <li><a href=\pages\aboutUs\index.html"      class="p-[16.5px] lg:py-[19px] lg:p-[15.5px] xl:p-[35px] xl:py-[19px] hover:bg-gray-300 active:bg-gray-400 transition-colors text-sm">ABOUT</a></li>
-            <li><a href=\pages\schoolPage\index.html"   class="p-[16.5px] lg:py-[19px] lg:p-[15.5px] xl:p-[35px] xl:py-[19px] hover:bg-gray-300 active:bg-gray-400 transition-colors text-sm">SCHOOLS</a></li>
-            <li><a href=\pages\submitReview\index.html" class="p-[16.5px] lg:py-[19px] lg:p-[15.5px] xl:p-[35px] xl:py-[19px] hover:bg-gray-300 active:bg-gray-400 transition-colors text-sm">SUBMIT</a></li>
-            <li><a href=\pages\contactPage\index.html"  class="p-[16.5px] lg:py-[19px] lg:p-[15.5px] xl:p-[35px] xl:py-[19px] hover:bg-gray-300 active:bg-gray-400 transition-colors text-sm">CONTACT</a></li>
+            <li><a href="\index.html"                    class="p-[16.5px] lg:py-[19px] lg:p-[15.5px] xl:p-[35px] xl:py-[27px] hover:bg-gray-300 active:bg-gray-400 transition-colors text-[17.5px]">HOME</a></li>
+            <li><a href="\pages\aboutUs\index.html"     class="p-[16.5px] lg:py-[19px] lg:p-[15.5px] xl:p-[35px] xl:py-[27px] hover:bg-gray-300 active:bg-gray-400 transition-colors text-[17.5px]">ABOUT</a></li>
+            <li><a href="\pages\schoolPage\index.html"  class="p-[16.5px] lg:py-[19px] lg:p-[15.5px] xl:p-[35px] xl:py-[27px] hover:bg-gray-300 active:bg-gray-400 transition-colors text-[17.5px]">SCHOOLS</a></li>
+            <li><a href="\pages\submitReview\index.html" class="p-[16.5px] lg:py-[19px] lg:p-[15.5px] xl:p-[35px] xl:py-[27px] hover:bg-gray-300 active:bg-gray-400 transition-colors text-[17.5px]">SUBMIT</a></li>
+            <li><a href="\pages\contactPage\index.html" class="p-[16.5px] lg:py-[19px] lg:p-[15.5px] xl:p-[35px] xl:py-[27px] hover:bg-gray-300 active:bg-gray-400 transition-colors text-[17.5px]">CONTACT</a></li>
         </ul>
     </div>
     
