fix(school page): resolved issues on school div responsiveness

--- a/pages/schoolPage/index.html
+++ b/pages/schoolPage/index.html
@@ -171,8 +171,8 @@
                   
                 </container>
                 
-                <schoolBoxesContainer class="flex flex-col justify-center items-center">
-                <div class="flex-col justify-center items-center shadow-2xl rounded-2xl max-w-[60%] w-[60%] p-5 my-10" id="up">
+    <schoolBoxesContainer class="flex flex-col justify-center items-center lg:flex-row lg:grid lg:grid-cols-3 lg:grid-rows-3 lg:place-items-center">
+    <div class="flex-col justify-center items-center shadow-2xl rounded-2xl max-w-[250px] w-[50%] p-5 my-10" id="up">
     <div class="flex justify-center">
         <img src="assets/img/upd.svg" alt="" class="p-3">
     </div>
@@ -185,7 +185,7 @@
     </div>
 </div>
 
-<div class="flex-col justify-center items-center shadow-2xl rounded-2xl w-[60%] p-5 my-10" id="dlsu">
+<div class="flex-col justify-center items-center shadow-2xl rounded-2xl max-w-[250px] w-[50%] p-5 my-10" id="dlsu">
     <div class="flex justify-center">
         <img src="assets/img/dlsu.svg" alt="" class="p-3">
     </div>
@@ -198,7 +198,7 @@
     </div>
 </div>
 
-<div class="flex-col justify-center items-center shadow-2xl rounded-2xl w-[60%] border-black-200 p-5 my-10" id="ateneo">
+<div class="flex-col justify-center items-center shadow-2xl rounded-2xl w-[50%] max-w-[250px]  border-black-200 p-5 my-10" id="ateneo">
     <div class="flex justify-center">
         <img src="assets/img/ateneo.svg" alt="" class="p-3">
     </div>
@@ -211,7 +211,7 @@
     </div>
 </div>
 
-<div class="flex-col justify-center items-center shadow-2xl rounded-2xl w-[60%] p-5 my-10" id="ust">
+<div class="flex-col justify-center items-center shadow-2xl rounded-2xl w-[50%] max-w-[250px] p-5 my-10" id="ust">
     <div class="flex justify-center">
         <img src="assets/img/ust.svg" alt="" class="p-3">
     </div>
@@ -224,7 +224,7 @@
     </div>
 </div>
 
-<div class="flex-col justify-center items-center shadow-2xl rounded-2xl w-[60%] p-5 my-10" id="uplb">
+<div class="flex-col justify-center items-center shadow-2xl rounded-2xl w-[50%] max-w-[250px] p-5 my-10" id="uplb">
     <div class="flex justify-center">
         <img src="assets/img/uplb.svg" alt="" class="p-3">
     </div>
@@ -237,7 +237,7 @@
     </div>
 </div>
 
-<div class="flex-col justify-center items-center shadow-2xl rounded-2xl w-[60%] p-5 my-10" id="upm">
+<div class="flex-col justify-center items-center shadow-2xl rounded-2xl w-[50%]  max-w-[250px] p-5 my-10" id="upm">
     <div class="flex justify-center">
         <img src="assets/img/upm.svg" alt="" class="p-3">
     </div>
