--- a/pages/submitPage/index.html
+++ b/pages/submitPage/index.html
@@ -131,7 +131,7 @@
     </div>
     <div class="ml-auto">
         <form action="#" method="get" class="p-4 justify-end flex border-[#D9D9D9] " id="searchBar">
-            <input type="text" name="search" placeholder="SEARCH SCHOOLS" class="text-center text-xs rounded-l placeholder-black darkgrey" id="placeholder">
+            <input type="text" name="search" placeholder="SEARCH SCHOOLS" class="text-center text-xs rounded-l placeholder-black " id="placeholder">
             <button type="submit" class="cursor-pointer w-8 rounded-l">
                 <img src="assets/img/loupe 3.svg" alt="Search Icon" class="rounded-l darkgrey">
             </button>
@@ -139,7 +139,7 @@
     </div>
 </div>
         <div>
-            <form action="#" method="get" class="p-4 justify-end  flex border-[#D9D9D9] shadow: lg:hidden" id="searchBar" style="">
+            <form action="#" method="get" class="p-4 justify-end  flex border-[#D9D9D9] shadow: lg:hidden lg:hidden" id="searchBar">
                 <input type="text" name="search" placeholder="SEARCH SCHOOLS" class="text-center text-xs darkgrey rounded-l placeholder-black" id="placeholder">
                 <button type="submit" class="cursor-pointer w-8 rounded-l">
                     <img src="assets/img/loupe 3.svg" alt="Search Icon" class="rounded-l darkgrey">
