--- a/pages/signupPage/index.html
+++ b/pages/signupPage/index.html
@@ -18,15 +18,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="/pages/signupPage/assets/css/style.css">
     <script src="pages/signupPage/assets/js/scripts.js" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Alata&family=Inknut+Antiqua:wght@300;400;500;600;700;800;900&family=NTR&family=Roboto:ital,wght@0,100..900;1,100..900&family=Zilla+Slab:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Alata&family=Inknut+Antiqua:wght@300;400;500;600;700;800;900&family=NTR&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inknut+Antiqua:wght@300;400;500;600;700;800;900&family=NTR&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 
-<body class="" style="font-family: Inknut Antiqua;">
+<body class="Inknut">
     <header class="" >
-       <socmedContainer class="flex justify-center items-center p-3.5 lg:hidden" style="background-color: #1877F2;">
+       <socmedContainer class="flex justify-center items-center p-3.5 lg:hidden lightblue">
             <socmedLogo class="flex space-x-6 lg:space-x-12">
                 <a href="https://www.instagram.com/ragingboltsz/?fbclid=IwZXh0bgNhZW0CMTEAAR0LkZafdf6xwhAUjk8dX6t4PnkdA9SnnDVFybZFnF8UdUCTWjIqOg5q-VY_aem_pK1T6md4iD15dXcF0T2zYw" target="_blank">
                     <img src="assets/img/instagram 3.svg" alt="" class="" id="instagram">
@@ -45,7 +46,7 @@
 
         <upperBarnav class="flex items-center p-4 lg:p-0 justify-between">
             
-            <socmedLogo class="hidden lg:flex lg:space-x-6 lg:p-5" style="background-color: #1877F2;">
+            <socmedLogo class="hidden lg:flex lg:space-x-6 lg:p-5 lightblue">
                 <a href="https://www.instagram.com/ragingboltsz/?fbclid=IwZXh0bgNhZW0CMTEAAR0LkZafdf6xwhAUjk8dX6t4PnkdA9SnnDVFybZFnF8UdUCTWjIqOg5q-VY_aem_pK1T6md4iD15dXcF0T2zYw" target="_blank">
                     <img src="assets/img/instagram 3.svg" alt="" class="" id="instagram">
                 </a>
@@ -116,7 +117,7 @@
     <img src="assets/img/RAGINGBOLT.svg" alt="">
 </lowerNav>
 
-<div class="hidden lg:flex bg-white shadow:xl items-center lg: w-full " style="background-color: #F8F8F8;">
+<div class="hidden lg:flex bg-white shadow:xl items-center lg: w-full lightgrey">
     <div class="flex items-center bg-[#D9D9D9] p-3 pr-7">
         <img src="assets/img/ranking 3.svg" alt="" class="mr-4">
         <img src="assets/img/RAGINGBOLT.svg" alt="">
@@ -131,11 +132,11 @@
         </ul>
     </div>
 </div>
-    <div class="flex justify-center text-center p-5 " style="background-color: #03396C; font-family: Inknut Antiquw;">
+    <div class="flex justify-center text-center p-5 darkblue Inknut">
         <h1 class="text-white text-xl ">SIGN UP</h1>
     </div>
       
-   <main class="min-h-screen lg:min-h-full lg:p-0 p-5 pt-10 lg:flex lg:justify-center" style="background-color: #BCDDFF; font-family: Arial, Helvetica, sans-serif;">
+   <main class="min-h-screen lg:min-h-full lg:p-0 p-5 pt-10 lg:flex lg:justify-center skyblue Helvetica">
     <!DOCTYPE html>
     <html lang="en">
     <head>
@@ -145,7 +146,7 @@
       <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     </head>
     <body>
-      <div class="flex justify-center xl:m-20 max-w-[100%] lg:max-w-[100%]" style="font-family: Zilla Slab;">
+      <div class="flex justify-center xl:m-20 max-w-[100%] lg:max-w-[100%] font">
         <div class="w-full max-w-lg lg:max-w-3xl bg-white p-6 rounded-lg shadow-md xl:max-w-2xl">
           <div>
             <h1 class="text-center text-xl font-bold">BECOME A PART OF RAGING BOLTS <br> ACADEMIC LEGACY!</h1>
@@ -220,7 +221,7 @@
     </body>
     </html>
 </main>
-    <footer class="flex justify-center p-5" style="background-color: #D9D9D9;">
+    <footer class="flex justify-center p-5 darkgrey">
         <h3 class="text-gray-600 text-xs">
             Copyright © 2025, All Rights Reserved
         </h3>
