feat(login page): added login page

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <a href="">
                     <img src="assets/img/user 1.svg" alt="">
                 </a>
-                <a href="">
+                <a href="\pages\loginPage\index.html">
                     <h3 class="hover:bg-gray-300 transition-colors">Login</h3>
                 </a>  
             </adminCustomerCTA>
@@ -189,7 +189,6 @@
        
         <main class="min-h-screen flex justify-center items-center pl-10 lg:block hidden xl:p-20 xl:flex-col xl:items-center skyblue skyblue">
             <CTAcontainer class="flex p-1 items-center justify-center w-full lg:p-30 max-w-full lg:min-h-screen ">
-                <!-- Left side: Text and Button -->
                 <div class="flex lg:w-1/2 xl:w-4/5 ">
                     <div class="xl:flex">
                         <h1 class="p-3 text-center text-xl xl:p-0 w-30 md:text-start xl:p-20 custom-shadow 2xl:text-2xl">
