feat(user list page): added new nav link in header nav and removed home and about

--- a/pages/ratingForm/index.html
+++ b/pages/ratingForm/index.html
@@ -18,7 +18,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    
+    <script src="/pages/ratingForm/assets/js/scripts.js" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Alata&family=Inknut+Antiqua:wght@300;400;500;600;700;800;900&family=NTR&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inknut+Antiqua:wght@300;400;500;600;700;800;900&family=NTR&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
@@ -174,21 +174,21 @@
 
                 <div class="mb-4">
                     <label for="type_of_learning" class="form-label block">RATING (1-5) </label>
-                    <input type="text" class="form-control w-full p-2 rounded placeholder-gray-500 gray" id="type_of_learning" placeholder="">
+                    <input type="text" class="form-control w-full p-2 rounded placeholder-gray-500 gray" id="rating" placeholder="">
                 </div>
 
                 <div class="mb-4">
                     <label for="contact_info" class="form-label block">REVIEW DESCRIPTION</label>
-                    <input type="text" class="form-control w-full p-2 rounded placeholder-gray-500 gray" id="contact_info">
+                    <input type="text" class="form-control w-full p-2 rounded placeholder-gray-500 gray" id="comment">
                 </div>
                 <div class="mb-4">
                     <label for="contact_info" class="form-label block">RECOMMENDATION</label>
-                    <input type="text" class="form-control w-full p-2 rounded placeholder-gray-500 gray" id="contact_info">
+                    <input type="text" class="form-control w-full p-2 rounded placeholder-gray-500 gray" id="recommendation">
                 </div>
 
              
                 <div  class="flex justify-center align-center">
-                    <button type="submit" class="p-4 px-9 text-sm rounded-2xl rounded-2xl text-white lg:px-[80px] lg:font-bold Inknut darkblue">Submit </button >
+                    <button type="submit" class="p-4 px-9 text-sm rounded-2xl rounded-2xl text-white lg:px-[80px] lg:font-bold Inknut darkblue" id="reviewForm">Submit </button >
                 </div>
 
             </form>
