--- a/pages/submissions/index.html
+++ b/pages/submissions/index.html
@@ -76,7 +76,7 @@
                 class="nav-links duration-500 lg:static absolute bg-white lg:min-h-fit min-h-[40vh] left-0 top-[-100%] lg:w-auto w-full flex items-center shadow-md px-5">
                     <ul class="flex lg:flex-row flex-col md:items-center lg:gap-[4vw] gap-8" id="navCTA";">
                         <li><a href="\pages\schoolPage\index.html"   class="no-underline rounded-xl m-7 p-3 hover:bg-gray-300 transition-colors">SCHOOLS</a></li>
-                        <li><a href="\pages\submitReview\index.html" class="no-underline rounded-xl m-7 p-3 hover:bg-gray-300 transition-colors">SUBMIT</a></li>
+                        <li><a href="\pages\submitReview\index.html" class="no-underline rounded-xl m-7 p-3 hover:bg-gray-300 transition-colors">SUBMISSIONS</a></li>
                         <li><a href="\pages\contactPage\index.html"  class="no-underline rounded-xl m-7 p-3 hover:bg-gray-300 transition-colors">CONTACT</a></li>
                         <li><a href="\pages\userList\index.html"     class="no-underline rounded-xl m-7 p-3 hover:bg-gray-300 transition-colors">USER LIST</a></li>
                     </ul>
@@ -125,7 +125,7 @@
     <div class="ml-4">
         <ul class="flex ">
             <li><a href="\pages\schoolPage\index.html"   class="p-[16.5px] lg:py-[19px] lg:p-[15.5px] xl:p-[35px] xl:py-[19px] hover:bg-gray-300 active:bg-gray-400 transition-colors text-sm">SCHOOLS</a></li>
-            <li><a href="\pages\submitReview\index.html" class="p-[16.5px] lg:py-[19px] lg:p-[15.5px] xl:p-[35px] xl:py-[19px] hover:bg-gray-300 active:bg-gray-400 transition-colors text-sm">SUBMIT</a></li>
+            <li><a href="\pages\submitReview\index.html" class="p-[16.5px] lg:py-[19px] lg:p-[15.5px] xl:p-[35px] xl:py-[19px] hover:bg-gray-300 active:bg-gray-400 transition-colors text-sm">SUBMISSIONS</a></li>
             <li><a href="\pages\contactPage\index.html"  class="p-[16.5px] lg:py-[19px] lg:p-[15.5px] xl:p-[35px] xl:py-[19px] hover:bg-gray-300 active:bg-gray-400 transition-colors text-sm">CONTACT</a></li>
             <li><a href="\pages\userList\index.html"     class="no-underline rounded-xl m-7 p-3 hover:bg-gray-300 transition-colors">USER LIST</a></li>
         </ul>
