feat(submissions page): replaced login to admin nav

--- a/pages/submissions/index.html
+++ b/pages/submissions/index.html
@@ -64,9 +64,11 @@
                 <a href="">
                     <img src="assets/img/user 3.svg" alt="">
                 </a>
-                <a href="">
-                    <h3 class="hover:bg-gray-300 transition-colors">Login</h3>
-                </a>  
+                <div class="flex justify-center items-center">
+                    <a href="">
+                        <h3 class="hover:bg-gray-300 transition-colors">Admin</h3>
+                    </a>  
+                </div>
                
             </adminCustomerCTA>
 
