--- a/pages/userList/index.html
+++ b/pages/userList/index.html
@@ -67,7 +67,7 @@
                     <img src="assets/img/user 3.svg" alt="">
                 </a>
                 <a href="">
-                    <h3 class="hover:bg-gray-300 transition-colors">Login</h3>
+                    <h3 class="hover:bg-gray-300 transition-colors">Admin</h3>
                 </a>  
                
             </adminCustomerCTA>
